--- a/Desktop_GUI/README
+++ b/Desktop_GUI/README
@@ -1,14 +1,18 @@
 Deploy ny version af MatadorGUI
 1) Opdater versionsnummer i pom.xml!!!
 
-2) Kopier 'settings.xml' til dit lokale maven repository (eks. C:\Users\DITNAVN\.m2)
+2) Generer ny JavaDoc (IntelliJ: Tools-> Generate javaDoc). Placér den i Desktop_GUI\doc.
 
-3) Download og udpak maven: 'https://maven.apache.org/download.html' 
+2) Kopier 'settings.xml' til dit lokale maven repository (eks. C:\Users\DITNAVN\.m2)3
 
-4) Sæt PATH variablen til: 'MAVEN_STI/bin'  (eks.: C:\apache-maven-3.5.2\bin)
+4) Download og udpak maven: 'https://maven.apache.org/download.html'
 
-5) Gå til projektets rod (eks. C:\Users\DITNAVN\git\Matador_GUI\Desktop_GUI)
+5) Sæt PATH variablen til: 'MAVEN_STI/bin'  (eks.: C:\apache-maven-3.5.2\bin)
 
-6) Kør: 'mvn clean deploy'
+6) Gå til projektets rod (eks. C:\Users\DITNAVN\git\Matador_GUI\Desktop_GUI)
 
-7) Koden compileres og og uploades til 'diplomit-dtu/Matador_GUI' på 'repository' branchen
+7) Kør: 'mvn clean deploy'
+
+8) Koden compileres automatisk  og og uploades til 'diplomit-dtu/Matador_GUI' på 'repository' branchen med det nye versionsnummer
+
+9) Zip og Kopier Javadoc til google drive mappen.
